[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bocksup"
version = "0.2.0"
authors = [
  { name = "Bocksup Contributors" },
]
description = "A WhatsApp integration library that replicates yowsup's functionality with improved stability and modern Python support"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp>=3.8.0",
    "websockets>=10.4",
    "construct>=2.10.0",
    "pycryptodome>=3.15.0",
    "email-validator>=1.3.0",
    "flask>=3.0.3",
    "gunicorn>=23.0.0",
    "crypto>=1.4.1",
    "pytest>=8.3.5",
    "asyncio>=3.4.3",
    "cryptography>=44.0.2",
]

[project.urls]
"Homepage" = "https://github.com/gyovannyvpn123/Bowsup-Whatsap-library"
"Bug Tracker" = "https://github.com/gyovannyvpn123/Bowsup-Whatsap-library/issues"
"Documentation" = "https://github.com/gyovannyvpn123/Bowsup-Whatsap-library/wiki"

[tool.hatch.build.targets.wheel]
packages = ["bocksup"]
